# civiclens-ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  download_executive_orders_pdf_files.py  pyproject.toml  requirements.txt  signed_from_01_20_2025_to_01_11_2026_executive_order.csv  start.sh
app/: chainlit_app.py  constants.py  eval_ragas.py  ingest.py  rag.py  utils.py
evaluation/: 92_sample_questions.md  eval_rag_quality.py  qna_test.json
evaluation/results/: results_20260115_120207.csv  results_20260115_120207.json  results_20260115_120727.csv  results_20260115_120727.json
public/: custom.css
